[package]
name = "mpl-hybrid-program"
version = "0.0.1"
description = "The MPL Hybrid program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_hybrid"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
# idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "~0.29", features = ["init-if-needed"] }
anchor-spl = { version = "~0.29" }
arrayref = "0.3.6"
getrandom = { version = "0.2.9", features = ["custom"] }
solana-program = "=1.17.22"
winnow = "=0.4.1"
toml_datetime = "=0.6.5"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "~1.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = { version = "0.2.0" }
mpl-core = "0.7.1"

[dev-dependencies]
proptest = { version = "1.0" }
