[package]
description = "The MPL Hybrid program"
edition = "2021"
name = "mpl-hybrid-program"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_hybrid"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
# idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "~0.29", features = ["init-if-needed"] }
anchor-spl = { version = "~0.29" }
arrayref = "0.3.6"
getrandom = { version = "0.2.9", features = ["custom"] }
mpl-core = "0.7.1"
mpl-utils = "0.3.5"
solana-program = "=1.17.22"
spl-associated-token-account = { version = "2.3.0", features = [
  "no-entrypoint",
] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "~1.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = { version = "0.2.0" }
toml_datetime = "=0.6.5"
winnow = "=0.4.1"

[dev-dependencies]
proptest = { version = "1.0" }
